-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.8.3
-
4a8cc427f (6.8), b6a280334 (dev), 5b55387a8 (tqtc/lts-6.8)
-
DaVinci 115
/home/qt/work/qt/qtwebengine/src/core/api/qwebenginenewwindowrequest.cpp:114: (qdoc) warning: Invalid QML property type: QRect /home/qt/work/qt/qtwebengine/src/core/api/qwebenginenewwindowrequest.cpp:100: (qdoc) warning: Invalid QML property type: QUrl /home/qt/work/qt/qtwebengine/src/core/api/qwebenginenewwindowrequest.cpp:114: (qdoc) warning: Invalid QML property type: QRect /home/qt/work/qt/qtwebengine/src/core/api/qwebenginenewwindowrequest.cpp:100: (qdoc) warning: Invalid QML property type: QUrl /home/qt/work/qt/qtwebengine/src/core/api/qwebenginenewwindowrequest.cpp:114: (qdoc) warning: Invalid QML property type: QRect /home/qt/work/qt/qtwebengine/src/core/api/qwebenginenewwindowrequest.cpp:100: (qdoc) warning: Invalid QML property type: QUrl QDoc: error: Documentation warnings (6) exceeded the limit (2) for 'QtWebEngine'. ninja: build stopped: subcommand failed. Process finished with error: exit status 1
Details: https://testresults.qt.io/coin/integration/qt/qtwebengine/tasks/1740758352
Tested changes (refs/builds/qtci/6.8/1740758351):
https://codereview.qt-project.org/c/qt/qtwebengine/+/627991/2 Update dependencies on '6.8' in qt/qtwebengine