Doc: Fix documentation issues

PdfStyle.qml:
  (qdoc) warning: Unknown base 'QtObject' for QML type 'PdfStyle'

Fixed by introducing a doc dependency to `qtqml`.

qwebenginenewwindowrequest.cpp:
  (qdoc) warning: Invalid QML property type: QUrl
  (qdoc) warning: Invalid QML property type: QRect

Replaced with QML types (url, rect) instead.

qwebenginewebauthuxrequest.cpp:
  (qdoc) warning: Can't link to 'WebEngineWebAuthUxRequest.WebAuthUxState.CollectPin'
  (qdoc) warning: Can't link to 'WebEngineWebAuthPinRequest::reason'

Fixes: QTBUG-134248
Change-Id: I313dddba6a374e65c23d371437d0fb148374bd2c
Reviewed-by: Andreas Eliasson <andreas.eliasson@qt.io>
(cherry picked from commit 5f976f185d3ead42e1dbb028deca60a2cfc0b9c6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit e258edec23a24c6b308455c2706e945612787aff)
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>